--- a/app/src/main/res/layout/activity_info_list.xml
+++ b/app/src/main/res/layout/activity_info_list.xml
@@ -49,11 +49,14 @@
             android:textSize="12sp"/>
     </RelativeLayout>
 
-    <ListView
-        android:id="@+id/list"
+    <cn.fpower.financeservice.view.widget.RefreshListView
         android:layout_below="@+id/layout_title"
+        android:id="@+id/fragment_progress_rlv"
         android:layout_width="match_parent"
-        android:background="@color/white"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:divider="#bababa"
+        android:dividerHeight="1dp"
+        android:listSelector="@android:color/transparent"
+        android:scrollbars="none"/>
 
 </RelativeLayout>
