--- a/app/src/main/res/layout/activity_me_result.xml
+++ b/app/src/main/res/layout/activity_me_result.xml
@@ -7,58 +7,7 @@
 
     <include layout="@layout/title_bar" />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:paddingLeft="20dp"
-        android:paddingTop="17dp"
-        android:paddingBottom="25dp"
-        android:paddingRight="20dp">
-
-        <RelativeLayout
-            android:id="@+id/layout_head"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/img_my_head"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_centerVertical="true"
-                android:layout_alignParentLeft="true"
-                android:background="#ff0000" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="11dp"
-                android:layout_toRightOf="@+id/img_my_head"
-                android:text="本月业绩"
-                android:layout_centerVertical="true"
-                android:textColor="#908F8F"
-                android:textSize="14sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:text="12月"
-                android:textColor="#908F8F"
-                android:textSize="14sp" />
-        </RelativeLayout>
-
-        <TextView
-            android:layout_marginTop="16dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/layout_head"
-            android:text="￥50000.00"
-            android:layout_centerVertical="true"
-            android:textColor="#F84431"
-            android:textSize="30sp" />
-    </RelativeLayout>
+    <include layout="@layout/item_info_top" />
 
     <RelativeLayout
         android:paddingLeft="20dp"
