--- a/app/src/main/res/layout/item_info_top.xml
+++ b/app/src/main/res/layout/item_info_top.xml
@@ -2,11 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="17dp"
-    android:paddingBottom="25dp"
     android:background="@color/white"
+    android:paddingBottom="18dp"
     android:paddingLeft="20dp"
-    android:paddingRight="20dp">
+    android:paddingRight="20dp"
+    android:paddingTop="14dp">
 
     <RelativeLayout
         android:id="@+id/layout_head"
@@ -16,15 +16,15 @@
         <ImageView
             android:id="@+id/img_my_head"
             android:layout_width="25dp"
-            android:layout_marginRight="12dp"
             android:layout_height="25dp"
+            android:layout_marginRight="12dp"
             android:background="#ff0000" />
 
         <TextView
             android:id="@+id/name"
-            android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/img_my_head"
             android:text="本月业绩"
             android:textColor="#272727"
@@ -46,9 +46,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/layout_head"
-        android:layout_marginTop="15dp"
-        android:textStyle="bold"
-        android:text="￥50000.00"
+        android:layout_marginTop="8dp"
+        android:text="￥"
         android:textColor="#F84431"
-        android:textSize="30sp" />
+        android:textSize="30sp"
+        android:textStyle="bold" />
 </RelativeLayout>
