--- a/app/src/main/res/layout/activity_progress_detail.xml
+++ b/app/src/main/res/layout/activity_progress_detail.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <include layout="@layout/title_bar"></include>
 
@@ -38,16 +38,15 @@
                         android:layout_toRightOf="@+id/img_my_head"
                         android:text="申请金额"
                         android:textColor="#272727"
-                        android:textSize="14sp"/>
+                        android:textSize="14sp" />
 
                     <TextView
                         android:id="@+id/progress_time"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
-                        android:text="2015-12-01 12:01"
                         android:textColor="#737373"
-                        android:textSize="14sp"/>
+                        android:textSize="14sp" />
                 </RelativeLayout>
 
 
@@ -57,10 +56,9 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/layout_head"
                     android:layout_marginTop="21dp"
-                    android:text="￥50000.00"
                     android:textColor="#F84431"
                     android:textSize="30sp"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
             </RelativeLayout>
 
             <View
@@ -78,8 +76,7 @@
                     android:id="@+id/progress_header"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:layout_marginLeft="21dp"
-                    android:src="@mipmap/ad1"/>
+                    android:layout_marginLeft="21dp" />
 
                 <TextView
                     android:id="@+id/progress_name"
@@ -88,9 +85,8 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="16dp"
                     android:layout_toRightOf="@id/progress_header"
-                    android:text="江小贤"
                     android:textColor="#292929"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp" />
 
                 <ImageView
                     android:id="@+id/progress_phone"
@@ -98,14 +94,18 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="21dp"
-                    android:src="@mipmap/phone"/>
+                    android:paddingBottom="10dp"
+                    android:paddingLeft="21dp"
+                    android:paddingRight="21dp"
+                    android:paddingTop="10dp"
+
+                    android:src="@mipmap/phone" />
             </RelativeLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="8dp"
-                android:background="#f0eff5"/>
+                android:background="#f0eff5" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -138,7 +138,7 @@
                             android:layout_height="10dp"
                             android:layout_gravity="center"
                             android:padding="1dp"
-                            android:src="@mipmap/progress_ok"/>
+                            android:src="@mipmap/progress_ok" />
 
                         <View
                             android:layout_width="0dp"
@@ -155,16 +155,15 @@
                         android:layout_marginTop="13dp"
                         android:text="录入成功"
                         android:textColor="#b7b6b6"
-                        android:textSize="14sp"/>
+                        android:textSize="14sp" />
 
                     <TextView
-                        android:id="@+id/progress_time1"
+                        android:id="@+id/progress_tqime1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="2015-12-01 12:01"
                         android:textColor="#b7b6b6"
-                        android:textSize="12sp"/>
+                        android:textSize="12sp" />
 
                 </LinearLayout>
 
@@ -193,7 +192,7 @@
                             android:layout_height="10dp"
                             android:layout_gravity="center"
                             android:padding="1dp"
-                            android:src="@mipmap/progress_ok"/>
+                            android:src="@mipmap/progress_ok" />
 
                         <View
                             android:id="@+id/line1"
@@ -201,7 +200,7 @@
                             android:layout_height="3dp"
                             android:layout_gravity="center"
                             android:layout_weight="1"
-                            android:background="#13d424"></View>
+                            android:background="@color/progress_line_normal"></View>
 
                     </LinearLayout>
 
@@ -211,16 +210,15 @@
                         android:layout_marginTop="13dp"
                         android:text="正在审核"
                         android:textColor="#b7b6b6"
-                        android:textSize="14sp"/>
+                        android:textSize="14sp" />
 
                     <TextView
                         android:id="@+id/progress_time2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="2015-12-01 12:01"
                         android:textColor="#b7b6b6"
-                        android:textSize="12sp"/>
+                        android:textSize="12sp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -242,7 +240,7 @@
                             android:layout_height="3dp"
                             android:layout_gravity="center"
                             android:layout_weight="1"
-                            android:background="#13d424"></View>
+                            android:background="@color/progress_line_normal"></View>
 
                         <ImageView
                             android:id="@+id/progress_state_iv"
@@ -250,7 +248,7 @@
                             android:layout_height="15dp"
                             android:layout_gravity="center"
                             android:padding="1dp"
-                            android:src="@mipmap/progress_success"/>
+                            android:src="@mipmap/progress_fail" />
 
                         <View
                             android:layout_width="0dp"
@@ -265,18 +263,16 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="13dp"
-                        android:text="申请成功"
                         android:textColor="#13d424"
-                        android:textSize="14sp"/>
+                        android:textSize="14sp" />
 
                     <TextView
                         android:id="@+id/progress_time3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="2015-12-01 12:01"
                         android:textColor="#b7b6b6"
-                        android:textSize="12sp"/>
+                        android:textSize="12sp" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -299,7 +295,7 @@
                     android:layout_marginLeft="22dp"
                     android:text="地址"
                     android:textColor="#717171"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/progress_address"
@@ -311,9 +307,8 @@
                     android:layout_toRightOf="@id/progress_address_tv"
                     android:gravity="right"
                     android:singleLine="true"
-                    android:text="北京朝阳区酒仙桥1号楼2004"
                     android:textColor="#717171"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp" />
 
             </RelativeLayout>
 
@@ -334,7 +329,7 @@
                     android:layout_marginLeft="22dp"
                     android:text="有无房产"
                     android:textColor="#717171"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/progress_has_house"
@@ -344,9 +339,8 @@
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="21dp"
                     android:singleLine="true"
-                    android:text="有"
                     android:textColor="#717171"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp" />
 
             </RelativeLayout>
 
@@ -367,7 +361,7 @@
                     android:layout_marginLeft="22dp"
                     android:text="有无贷款"
                     android:textColor="#717171"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/progress_has_money"
@@ -377,9 +371,8 @@
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="21dp"
                     android:singleLine="true"
-                    android:text="有"
                     android:textColor="#717171"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp" />
 
             </RelativeLayout>
 
@@ -400,7 +393,7 @@
                     android:layout_marginLeft="22dp"
                     android:text="渠道"
                     android:textColor="#717171"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/progress_has_chanel"
@@ -410,9 +403,8 @@
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="21dp"
                     android:singleLine="true"
-                    android:text="有"
                     android:textColor="#717171"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp" />
 
             </RelativeLayout>
 
