--- a/app/src/main/res/layout/item_success_example.xml
+++ b/app/src/main/res/layout/item_success_example.xml
@@ -54,6 +54,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:paddingRight="21dp" />
+        android:paddingBottom="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="21dp"
+        android:paddingTop="10dp" />
 
 </RelativeLayout>
