--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -16,4 +16,10 @@
     <color name="progress_text_select">#F20C00</color>
 
     <color name="black_000000">#000000</color>
+    <color name="progress_checking">#e89201</color>
+    <color name="progress_checked">#28a901</color>
+    <color name="progress_check_ok">#e61600</color>
+    <color name="progress_line_select">#13d424</color>
+    <color name="progress_line_normal">#dddddd</color>
+    <color name="progress_checking_tv">#e39400</color>
 </resources>
