--- a/app/src/main/res/layout/activity_progress_detail.xml
+++ b/app/src/main/res/layout/activity_progress_detail.xml
@@ -110,8 +110,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -158,12 +158,13 @@
                         android:textSize="14sp" />
 
                     <TextView
+                        android:text="2011-11-10 02:11"
                         android:id="@+id/progress_tqime1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:textColor="#b7b6b6"
-                        android:textSize="9sp" />
+                        android:textSize="11sp" />
 
                 </LinearLayout>
 
@@ -218,7 +219,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:textColor="#b7b6b6"
-                        android:textSize="12sp" />
+                        android:textSize="11sp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -272,7 +273,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:textColor="#b7b6b6"
-                        android:textSize="12sp" />
+                        android:textSize="11sp" />
                 </LinearLayout>
 
             </LinearLayout>
