--- a/app/src/main/res/drawable/s_round_group_red.xml
+++ b/app/src/main/res/drawable/s_round_group_red.xml
@@ -1,12 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="@color/button_bg"/>
+    <item android:state_enabled="false"><shape android:shape="rectangle">
+        <solid android:color="#CFCFCF"/>
 
-    <corners
-        android:bottomLeftRadius="8dp"
-        android:bottomRightRadius="8dp"
-        android:topLeftRadius="8dp"
-        android:topRightRadius="8dp"/>
+        <corners
+            android:bottomLeftRadius="8dp"
+            android:bottomRightRadius="8dp"
+            android:topLeftRadius="8dp"
+            android:topRightRadius="8dp"/>
+    </shape></item>
 
-</shape>
+    <item><shape android:shape="rectangle">
+        <solid android:color="@color/button_bg"/>
+
+        <corners
+            android:bottomLeftRadius="8dp"
+            android:bottomRightRadius="8dp"
+            android:topLeftRadius="8dp"
+            android:topRightRadius="8dp"/>
+    </shape></item>
+
+</selector>
