--- a/app/src/main/res/layout/activity_edit_pass.xml
+++ b/app/src/main/res/layout/activity_edit_pass.xml
@@ -8,14 +8,24 @@
     <include layout="@layout/title_bar" />
 
     <cn.fpower.financeservice.view.widget.ClearEditText
-        android:id="@+id/view_pwd"
+        android:id="@+id/view_old_pass"
         style="@style/edittext_linput"
-        android:inputType="textPassword"
         android:layout_width="match_parent"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="22dp"
-        android:hint="@string/input_mobile" />
+        android:inputType="number"
+        android:hint="@string/input_old_pwd" />
+
+    <cn.fpower.financeservice.view.widget.ClearEditText
+        android:id="@+id/view_new_pass"
+        style="@style/edittext_linput"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="22dp"
+        android:inputType="number"
+        android:hint="@string/input_new_pwd" />
 
     <Button
         android:background="@drawable/s_round_group_red"
@@ -26,7 +36,6 @@
         android:layout_marginTop="22dp"
         android:layout_width="match_parent"
         android:layout_height="46dp"
-        android:text="@string/login_in"
-        android:id="@+id/loginin" />
-
+        android:text="@string/submit"
+        android:id="@+id/submit" />
 </LinearLayout>
