--- a/app/src/main/res/layout/activity_login_check.xml
+++ b/app/src/main/res/layout/activity_login_check.xml
@@ -8,14 +8,15 @@
     <include layout="@layout/title_bar" />
 
     <cn.fpower.financeservice.view.widget.ClearEditText
-        android:id="@+id/view_pwd"
+        android:id="@+id/view_mobile"
         style="@style/edittext_linput"
-        android:inputType="textPassword"
         android:layout_width="match_parent"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="22dp"
-        android:hint="@string/input_mobile" />
+        android:inputType="number"
+        android:hint="@string/input_mobile"
+        android:maxLength="11" />
 
     <Button
         android:background="@drawable/s_round_group_red"
@@ -28,5 +29,30 @@
         android:layout_height="46dp"
         android:text="@string/login_in"
         android:id="@+id/loginin" />
+
+
+    <TextView
+        android:id="@+id/forget_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:layout_marginTop="10dp"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        android:textColor="#494949"
+        android:text="忘记密码"
+        android:layout_gravity="right"
+        android:textSize="14sp" />
+    <TextView
+        android:id="@+id/des"
+        android:visibility="gone"
+        android:text="如需帮助，请致电010-5768421"
+        android:layout_marginTop="12dp"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center"
+        android:textSize="12sp"
+        android:textColor="@color/text_des"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
