--- a/app/src/main/res/layout/activity_reg.xml
+++ b/app/src/main/res/layout/activity_reg.xml
@@ -41,6 +41,7 @@
         android:layout_width="match_parent"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+        android:inputType="textPassword"
         android:layout_marginTop="22dp"
         android:hint="@string/input_pwd"
         android:maxLength="11" />
