--- a/app/src/main/res/layout/fragment_entering.xml
+++ b/app/src/main/res/layout/fragment_entering.xml
@@ -16,26 +16,28 @@
         android:layout_below="@+id/layout_head"
         app:txtName="姓名" />
 
-    <cn.fpower.financeservice.view.widget.EnteringSettingView
-        android:id="@+id/info_money"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/info_name"
-        app:txtName="申请金额"/>
+
 
     <cn.fpower.financeservice.view.widget.EnteringSettingView
         android:id="@+id/info_mobile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/info_money"
+        android:layout_below="@+id/info_name"
         app:txtName="电话"/>
+
+    <cn.fpower.financeservice.view.widget.EnteringSettingView
+        android:id="@+id/info_money"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/info_mobile"
+        app:txtName="申请金额"/>
 
     <cn.fpower.financeservice.view.widget.EnteringSettingView
         android:id="@+id/info_addr"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/info_mobile"
-        app:txtName="地址"/>
+        android:layout_below="@+id/info_money"
+        app:txtName="@string/area"/>
 
     <cn.fpower.financeservice.view.widget.EnteringSettingView
         android:id="@+id/info_addrdetail"
