--- a/app/src/main/res/layout/activity_login_check.xml
+++ b/app/src/main/res/layout/activity_login_check.xml
@@ -40,19 +40,9 @@
         android:layout_marginTop="10dp"
         android:paddingTop="12dp"
         android:paddingBottom="12dp"
-        android:textColor="#494949"
+        android:textColor="#E60012"
         android:text="忘记密码"
         android:layout_gravity="right"
         android:textSize="14sp" />
-    <TextView
-        android:id="@+id/des"
-        android:visibility="gone"
-        android:text="如需帮助，请致电010-5768421"
-        android:layout_marginTop="12dp"
-        android:layout_width="wrap_content"
-        android:layout_gravity="center"
-        android:textSize="12sp"
-        android:textColor="@color/text_des"
-        android:layout_height="wrap_content" />
 
 </LinearLayout>
